🔧 Remove deprecated Java parameter from test config